--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
 			<version>5.5.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.javatuples</groupId>
+			<artifactId>javatuples</artifactId>
+			<version>1.2</version>
+		</dependency>
+
 
 	</dependencies>
 
